[package]
name = "lieweb"
version = "0.2.0-alpha.1"
authors = ["zzzdong <kuwater@163.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/zzzdong/lieweb"
homepage = "https://github.com/zzzdong/lieweb"
documentation = "https://docs.rs/lieweb/"
description = """
a simple async web framework
"""
categories = ["web-programming::http-server", "network-programming", "asynchronous"]
keywords = ["web", "http", "framework", "async"]

[features]
default = []
tls = [ "tokio-rustls" ]

[dependencies]
bytes = "0.5"
futures = "0.3"
futures-util = "0.3"
hyper = "0.13"
lazy_static = "1.4"
log = "0.4"
mime = "0.3"
route-recognizer = "0.2"
serde = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.6.1"
thiserror = "1.0"
tokio = "0.2"
tokio-rustls = { version="0.14", optional=true }

[dev-dependencies]
env_logger = "0.7.1"
tokio = { version="0.2", features=["full"] }
serde = { version="1.0", features=["derive"] }

[[example]]
name = "tls"
required-features = ["tls"]
