[package]
name = "lieweb"
version = "0.2.0-beta.1"
authors = ["zzzdong <kuwater@163.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/zzzdong/lieweb"
homepage = "https://github.com/zzzdong/lieweb"
documentation = "https://docs.rs/lieweb/"
description = """
a simple async web framework
"""
categories = ["web-programming::http-server", "network-programming", "asynchronous"]
keywords = ["web", "http", "framework", "async"]

[features]
default = ["tls"]
tls = [ "tokio-rustls" ]

[dependencies]
async-trait = "0.1"
bytes = "1.0"
futures = "0.3"
futures-util = "0.3"
hyper = { version="0.14", features=["server", "http1", "http2", "stream"] }
lazy_static = "1.4"
mime = "0.3"
rand = "0.8"
route-recognizer = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7"
thiserror = "1.0"
tokio = "1.0"
tokio-rustls = { version="0.22", optional=true }
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = "0.2"
tokio = { version="1.0", features=["full"] }
serde = { version="1.0", features=["derive"] }

[[example]]
name = "tls"
required-features = ["tls"]
